unpackaged/main/default/objects/Invoice_Metadata__mdt/Invoice_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Metadata</label>
    <pluralLabel>Invoices Metadata</pluralLabel>
</CustomObject>