unpackaged/main/default/objects/Invoice_Metadata__mdt/fields/InvoiceController_genCancellationInvoice__c.field-meta.xml
<CustomField>
    <fullName>InvoiceController_genCancellationInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoiceController.genCancellationInvoice</label>
    <type>Checkbox</type>
</CustomField>