unpackaged/main/default/objects/Invoice_Metadata__mdt/fields/InvoiceController_genDepositInvoice__c.field-meta.xml
<CustomField>
    <fullName>InvoiceController_genDepositInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoiceController.genDepositInvoice</label>
    <type>Checkbox</type>
</CustomField>