unpackaged/main/default/objects/Invoice_Metadata__mdt/fields/InvoiceController_genFinalInvoice__c.field-meta.xml
<CustomField>
    <fullName>InvoiceController_genFinalInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoiceController.genFinalInvoice</label>
    <type>Checkbox</type>
</CustomField>