unpackaged/main/default/objects/Invoice_Metadata__mdt/fields/InvoiceController_genReactiveInvoice__c.field-meta.xml
<CustomField>
    <fullName>InvoiceController_genReactiveInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoiceController.genReactiveInvoice</label>
    <type>Checkbox</type>
</CustomField>